phase3: materialized zone state in Redis with geo and query APIs

--- a/services/sensor-simulator/.env.example
+++ b/services/sensor-simulator/.env.example
@@ -7,7 +7,7 @@ NUM_ZONES=10
 EVENTS_PER_SECOND=50
 
 # Scenario type: normal | spike | drop
-SCENARIO=drop
+SCENARIO=spike
 
 # Log progress every N events
 LOG_EVERY_N=100
