--- a/services/sensor-simulator/package.json
+++ b/services/sensor-simulator/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@types/node": "^25.2.0",
     "@types/uuid": "^9.0.8",
+    "dotenv": "^17.2.3",
     "kafkajs": "^2.2.4",
     "typescript": "^5.9.3",
     "uuid": "^9.0.1"
