--- a/services/alert-processor/package.json
+++ b/services/alert-processor/package.json
@@ -19,8 +19,10 @@
   "description": "GeoPulse Alert Processor - consumes zone.alerts and persists alert history in Redis",
   "dependencies": {
     "@types/node": "^25.2.0",
+    "@types/pg": "^8.11.11",
     "dotenv": "^17.2.3",
     "kafkajs": "^2.2.4",
+    "pg": "^8.13.1",
     "redis": "^5.10.0",
     "typescript": "^5.9.3"
   },
