--- a/services/api/package.json
+++ b/services/api/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@types/pg": "^8.11.11",
     "express": "^4.18.2",
+    "pino": "^9.0.0",
     "pg": "^8.13.1",
     "redis": "^4.6.13"
   },
@@ -22,6 +23,7 @@
     "@types/express": "^4.17.21",
     "@types/redis": "^4.0.11",
     "nodemon": "^3.0.3",
+    "pino-pretty": "^11.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
