--- a/services/sensor-simulator/package.json
+++ b/services/sensor-simulator/package.json
@@ -23,11 +23,13 @@
     "@types/uuid": "^9.0.8",
     "dotenv": "^17.2.3",
     "kafkajs": "^2.2.4",
+    "pino": "^9.0.0",
     "typescript": "^5.9.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.11",
+    "pino-pretty": "^11.0.0",
     "ts-node": "^10.9.2"
   }
 }
