--- a/services/stream-processor/package.json
+++ b/services/stream-processor/package.json
@@ -25,6 +25,7 @@
     "@types/redis": "^4.0.10",
     "dotenv": "^17.2.3",
     "kafkajs": "^2.2.4",
+    "pino": "^9.0.0",
     "redis": "^5.10.0",
     "typescript": "^5.9.3"
   },
@@ -32,6 +33,7 @@
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
     "nodemon": "^3.1.11",
+    "pino-pretty": "^11.0.0",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2"
   }
