--- a/services/alert-processor/package.json
+++ b/services/alert-processor/package.json
@@ -26,6 +26,7 @@
     "kafkajs": "^2.2.4",
     "pino": "^9.0.0",
     "pg": "^8.13.1",
+    "prom-client": "^15.0.0",
     "redis": "^5.10.0",
     "typescript": "^5.9.3"
   },
