--- a/services/api/package.json
+++ b/services/api/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "pino": "^9.0.0",
     "pg": "^8.13.1",
+    "prom-client": "^15.0.0",
     "redis": "^4.6.13"
   },
   "devDependencies": {
